--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "decompressor",
+  "name": "system.new.dat.br-extractor",
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "node app.js"
   },
   "keywords": [],
   "author": "",
